--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -56,6 +56,7 @@
   "dependencies": {
     "@trpc/server": "^10.45.2",
     "@uni-helper/devtools-shared": "workspace:*",
+    "@uni-helper/trpc-client": "workspace:*",
     "@uni-helper/uni-env": "^0.1.1",
     "@vue/compiler-sfc": "^3.4.27",
     "body-parser": "^1.20.2",
