--- a/packages/trpc-client/package.json
+++ b/packages/trpc-client/package.json
@@ -79,6 +79,7 @@
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-multi-input": "^1.4.2",
     "rollup-plugin-node-externals": "^7.1.2",
+    "rollup-plugin-swc3": "^0.11.2",
     "rollup-plugin-typescript2": "^0.36.0",
     "undici": "^6.0.1"
   }
