--- a/package.json
+++ b/package.json
@@ -34,15 +34,13 @@
     "preinstall": "npx only-allow pnpm",
     "postinstall": "npx simple-git-hooks"
   },
-  "dependencies": {
-    "@ungap/structured-clone": "^1.2.0"
-  },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.21.1",
+    "@antfu/eslint-config": "2.21.1",
     "@antfu/ni": "^0.21.12",
     "@dcloudio/types": "^3.4.7",
     "@types/node": "^20.14.2",
     "@types/ungap__structured-clone": "^1.2.0",
+    "@ungap/structured-clone": "^1.2.0",
     "@unocss/eslint-config": "^0.59.4",
     "@unocss/eslint-plugin": "^0.59.4",
     "@unocss/reset": "^0.59.4",
