--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -30,6 +30,7 @@
     "@vueuse/core": "^10.9.0",
     "floating-vue": "^5.2.2",
     "fuse.js": "^7.0.0",
+    "nanoid": "^5.0.7",
     "shiki": "^1.7.0",
     "splitpanes": "^3.1.5",
     "vue": "^3.4.27",
