--- a/playground/package.json
+++ b/playground/package.json
@@ -44,32 +44,32 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-app-plus": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-components": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-h5": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-mp-jd": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-mp-lark": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-mp-qq": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-mp-xhs": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-4000020240111001",
+    "@dcloudio/uni-app": "3.0.0-4020320240708001",
+    "@dcloudio/uni-app-plus": "3.0.0-4020320240708001",
+    "@dcloudio/uni-components": "3.0.0-4020320240708001",
+    "@dcloudio/uni-h5": "3.0.0-4020320240708001",
+    "@dcloudio/uni-mp-alipay": "3.0.0-4020320240708001",
+    "@dcloudio/uni-mp-baidu": "3.0.0-4020320240708001",
+    "@dcloudio/uni-mp-jd": "3.0.0-4020320240708001",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-4020320240708001",
+    "@dcloudio/uni-mp-lark": "3.0.0-4020320240708001",
+    "@dcloudio/uni-mp-qq": "3.0.0-4020320240708001",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-4020320240708001",
+    "@dcloudio/uni-mp-weixin": "3.0.0-4020320240708001",
+    "@dcloudio/uni-mp-xhs": "3.0.0-4020320240708001",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-4020320240708001",
     "@vueuse/core": "^10.7.2",
     "pinia": "2.0.36",
-    "vue": "^3.3.8",
-    "vue-i18n": "^9.6.5"
+    "vue": "^3.4.32",
+    "vue-i18n": "^9.13.1"
   },
   "devDependencies": {
-    "@dcloudio/types": "^3.4.7",
-    "@dcloudio/uni-automator": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-cli-shared": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-stacktracey": "3.0.0-alpha-4000020240111001",
+    "@dcloudio/types": "^3.4.12",
+    "@dcloudio/uni-automator": "3.0.0-4020320240708001",
+    "@dcloudio/uni-cli-shared": "3.0.0-4020320240708001",
+    "@dcloudio/uni-stacktracey": "3.0.0-4020320240708001",
     "@dcloudio/uni-vue-devtools": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-4000020240111001",
+    "@dcloudio/vite-plugin-uni": "3.0.0-4020320240708001",
     "@iconify-json/carbon": "^1.1.27",
     "@types/node": "^20.11.4",
     "@uni-helper/devtools": "workspace:*",
@@ -83,7 +83,7 @@
     "@uni-helper/vite-plugin-uni-pages": "^0.2.14",
     "@uni-helper/volar-service-uni-pages": "^0.2.14",
     "@unocss/eslint-config": "^0.58.3",
-    "@vue/runtime-core": "^3.3.8",
+    "@vue/runtime-core": "^3.4.32",
     "@vue/tsconfig": "^0.5.1",
     "eslint": "^8.56.0",
     "lint-staged": "^15.2.0",
@@ -91,7 +91,7 @@
     "typescript": "^5.3.3",
     "unocss": "^0.58.3",
     "unplugin-auto-import": "^0.17.3",
-    "vite": "^5.0.11",
+    "vite": "^5.2.8",
     "vue-tsc": "^1.8.27"
   }
 }
