--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -59,6 +59,7 @@
     "@uni-helper/trpc-client": "workspace:*",
     "@uni-helper/uni-env": "^0.1.1",
     "@vue/compiler-sfc": "^3.4.27",
+    "@webviewjs/webview": "^0.1.3",
     "body-parser": "^1.20.2",
     "detect-port": "^1.6.1",
     "error-stack-parser-es": "^0.1.4",
