--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -41,7 +41,7 @@
     }
   },
   "bin": {
-    "ud": "./cli/index.cjs"
+    "ud": "./dist/cli/index.cjs"
   },
   "files": [
     "cli",
@@ -63,7 +63,6 @@
     "@uni-helper/devtools-types": "workspace:*",
     "@uni-helper/trpc-client": "workspace:*",
     "@uni-helper/uni-env": "^0.1.1",
-    "@vue/compiler-sfc": "^3.4.27",
     "@webviewjs/webview": "^0.1.3",
     "body-parser": "^1.20.2",
     "detect-port": "^1.6.1",
@@ -91,6 +90,8 @@
     "@types/minimist": "^1.2.5",
     "@types/polka": "^0.5.7",
     "@types/ws": "^8.5.10",
+    "@vue/compiler-sfc": "^3.5.13",
+    "acorn": "^8.14.0",
     "chalk": "^5.3.0",
     "fs-extra": "^11.2.0",
     "glob": "^10.3.12",
