--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -29,9 +29,9 @@
     },
     "./*": "./*"
   },
-  "main": "dist/index.cjs",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "typesVersions": {
     "*": {
       "*": [
@@ -44,7 +44,6 @@
     "ud": "./dist/cli/index.cjs"
   },
   "files": [
-    "cli",
     "client",
     "dist",
     "inspect"
@@ -55,7 +54,7 @@
     "test": "vitest"
   },
   "peerDependencies": {
-    "vite": "^3.1.0 || ^4.0.0-0 || ^5.0.0-0"
+    "vite": ">=3.1.0"
   },
   "dependencies": {
     "@trpc/server": "^10.45.2",
@@ -63,21 +62,25 @@
     "@uni-helper/devtools-types": "workspace:*",
     "@uni-helper/trpc-client": "workspace:*",
     "@uni-helper/uni-env": "^0.1.1",
+    "@vue/compiler-sfc": "^3.5.13",
     "@webviewjs/webview": "^0.1.3",
+    "acorn": "^8.14.0",
     "body-parser": "^1.20.2",
     "detect-port": "^1.6.1",
     "error-stack-parser-es": "^0.1.4",
     "execa": "^9.3.0",
+    "fs-extra": "^11.2.0",
+    "glob": "^10.3.12",
     "image-meta": "^0.2.0",
     "json5": "^2.2.3",
     "launch-editor": "^2.8.0",
     "local-pkg": "^0.5.0",
     "magic-string": "^0.30.10",
-    "mime": "^4.0.3",
-    "minimist": "^1.2.8",
+    "mime": "^4.0.4",
     "open": "^10.1.0",
     "polka": "^0.5.2",
     "sirv": "^2.0.4",
+    "tsup": "^8.0.1",
     "vite-plugin-inspect": "^0.8.4",
     "vite-plugin-vue-devtools": "^7.2.1",
     "ws": "^8.17.1",
@@ -90,12 +93,6 @@
     "@types/minimist": "^1.2.5",
     "@types/polka": "^0.5.7",
     "@types/ws": "^8.5.10",
-    "@vue/compiler-sfc": "^3.5.13",
-    "acorn": "^8.14.0",
-    "chalk": "^5.3.0",
-    "fs-extra": "^11.2.0",
-    "glob": "^10.3.12",
-    "tsup": "^8.0.1",
     "unbuild": "^2.0.0",
     "vite": "^5.2.9"
   }
