--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -93,6 +93,7 @@
     "@types/minimist": "^1.2.5",
     "@types/polka": "^0.5.7",
     "@types/ws": "^8.5.10",
+    "posthtml": "^0.16.6",
     "unbuild": "^2.0.0",
     "vite": "^5.2.9"
   }
