--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -63,9 +63,12 @@
     "@uni-helper/trpc-client": "workspace:*",
     "@uni-helper/uni-env": "^0.1.1",
     "@vue/compiler-sfc": "^3.5.13",
+    "@vue/devtools-kit": "^7.6.7",
     "@webviewjs/webview": "^0.1.3",
     "acorn": "^8.14.0",
+    "acorn-walk": "^8.3.4",
     "body-parser": "^1.20.2",
+    "consola": "^3.2.3",
     "detect-port": "^1.6.1",
     "error-stack-parser-es": "^0.1.4",
     "execa": "^9.3.0",
