--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uni-helper/devtools-types",
-  "version": "0.0.1",
+  "version": "0.0.1-beta.1",
   "description": "",
   "author": "",
   "license": "ISC",
