--- a/playground/package.json
+++ b/playground/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vitesse-uni-app",
-  "version": "0.0.0",
+  "version": "0.0.1-beta.1",
   "private": true,
   "packageManager": "pnpm@8.14.1",
   "license": "MIT",
