--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
         run: corepack enable
 
       - name: Install Dependencies
-        run: pnpm i -frozen-lockfile
+        run: pnpm i --frozen-lockfile
 
       - name: PNPM build
         run: pnpm run build
