--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -58,6 +58,7 @@
     "vite": ">=3.1.0"
   },
   "dependencies": {
+    "@trpc/client": "10.45.2",
     "@trpc/server": "10.45.2",
     "@uni-helper/devtools-kit": "workspace:*",
     "@uni-helper/devtools-shared": "workspace:*",
