--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -99,6 +99,7 @@
     "@types/polka": "^0.5.7",
     "@types/ws": "^8.5.10",
     "posthtml": "^0.16.6",
+    "rollup-plugin-visualizer": "^5.12.0",
     "unbuild": "^2.0.0",
     "vite": "^5.2.9"
   }
